--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         <a href="#">HOME </a>|
         <a href="#">CATEGORIES </a>|
         <a href="#">LOGIN </a>|
-        <a href="#">SIGN IN </a>|
+        <a href="#">SIGN INs</a>|
         <a href="#">MY PROFILE</a>
         
    </nav>
