--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     
    <nav>
         <a href="#">HOME </a>|
-        <a href="#">CATEGORIES </a>|
+        <a href="#">CATEGORIE </a>|
         <a href="#">LOGIN </a>|
         <a href="#">SIGN INs</a>|
         <a href="#">MY PROFILE</a>
